# based-op

./: .env  .gitignore  Makefile  README.md  config.yml  config_maxgas.yml  local-config.yml
based/: .dockerignore  Cargo.toml  rustfmt.toml
based/crates/common/: Cargo.toml
based/crates/common/src/: actor.rs  api.rs  communication.rs  config.rs  db.rs  lib.rs  order.rs  p2p.rs  rpc.rs  signing.rs  utils.rs
based/crates/common/src/communication/: messages.rs  mod.rs  queue.rs  seqlock.rs  sequencer.rs  simulator.rs
based/crates/common/src/db/: alloy_db.rs  block.rs  cache.rs  frag.rs  init.rs  sorting.rs  state.rs
based/crates/common/src/time/: timer.rs
based/crates/common/src/transaction/: mod.rs  tx_list.rs
based/crates/common/src/transaction/simulated/: transaction.rs  tx_list.rs
based/crates/db/: Cargo.toml
based/crates/db/examples/: db_init.rs
based/crates/db/src/: alloy_db.rs  block.rs  block_commit.rs  cache.rs  cached.rs  error.rs  init.rs  lib.rs  util.rs
based/crates/pool/: Cargo.toml
based/crates/pool/src/transaction/: active.rs  pool.rs
based/crates/rpc/: Cargo.toml
based/crates/rpc/src/: engine.rs  engine_mock.rs  eth.rs  gossiper.rs  lib.rs
based/crates/sequencer/: Cargo.toml
based/crates/sequencer/src/: built_block.rs  built_frag.rs  config.rs  context.rs  frag.rs  lib.rs  simulator.rs  sorting.rs
based/crates/sequencer/src/block_sync/: block_fetcher.rs  fetch_blocks.rs  mock_fetcher.rs  mod.rs
based/crates/sequencer/src/sorting/: frag_sequence.rs  in_sort_frag.rs  in_sorting_frag.rs  mod.rs  sorting_data.rs
based/crates/simulator/: Cargo.toml
based/crates/simulator/src/: evms.rs  lib.rs
based/tests/: Cargo.toml
based/tests/src/: db.rs  genesis_db.rs  main.rs  rpc.rs  tests.rs
docs/: docusaurus.config.ts
docs/docs/: architecture.md  gateway.md  get-started.md  intro.md  introduction.md  overview.md  p2p.md  scaling.md  timekeeper.md
docs/docs/architecture/: consensus.md  execution.md  gateway.md  p2p.md  portal.md  timekeeper.md
docs/docs/getting_started/: connecting-a-wallet.md  get-started.md
follower-node/: .env  compose.yml  rollup-2151908.json
follower-node/scripts/: start_op_geth.sh
op-geth/beacon/engine/: types.go
op-geth/common/: types.go
op-geth/core/: blockchain.go  blockchain_insert.go  blockchain_reader.go  blockchain_test.go  state_processor.go  stateless.go  types.go
op-geth/core/types/: block.go  unsealed_block.go  unsealed_block_test.go
op-geth/eth/: api_debug.go  state_accessor.go
op-geth/eth/catalyst/: api.go  api_test.go
op-geth/internal/ethapi/: api.go
optimism-package/src/: el_cl_launcher.star
optimism-package/src/cl/op-node/: op_node_launcher.star
optimism-package/src/el/op-geth/: op_geth_launcher.star
optimism-package/src/mev/gateway/: gateway_launcher.star
optimism-package/src/package_io/: input_parser.star  sanity_check.star
optimism/op-e2e/e2eutils/opnode/: tracer.go
optimism/op-node/node/: api.go  comms.go  node.go
optimism/op-node/p2p/: gossip.go  host_test.go
optimism/op-node/rollup/driver/: driver.go  state.go
optimism/op-node/rollup/engine/: based_rpc_flow.md  engine_controller.go  events.go  new_frag_process.go  new_frag_success.go  preconf.go  preconf_test.go  seal_process.go  sealing_frag_success.go
optimism/op-program/client/l2/: engine.go
optimism/op-program/client/l2/engineapi/: l2_engine_api.go  l2_engine_api_test.go
optimism/op-service/eth/: ssz.go  ssz_test.go  types.go
optimism/op-service/sources/: engine_client.go
rabby/_raw/locales/en/: messages.json
rabby/_raw/locales/es/: messages.json
rabby/src/background/service/: customTestnet.ts  transactionWatcher.ts
rabby/src/ui/views/Approval/components/AddChain/: AddChain.tsx  type.ts
rabby/src/ui/views/CustomTestnet/components/: CustomTestnetForm.tsx
reth/crates/rpc/rpc-api/src/: engine.rs
reth/crates/rpc/rpc-engine-api/src/: engine_api.rs
