[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.83.0"
edition = "2021"
repository = "https://github.com/gattaca-com/based-op"

[workspace.dependencies]
bop-common = { path = "crates/common" }
bop-rpc = { path = "crates/rpc" }

alloy-consensus = "0.9.2"
alloy-eips = "0.9.2"
alloy-primitives = "0.8.19"
alloy-rpc-types = { version = "0.9.2", features = ["engine"] }
op-alloy-rpc-types-engine = "0.9.6"
alloy-rlp = "0.3.11"

# TODO: use current crate
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.5" }

futures = "0.3.31"
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
jsonrpsee = { version = "0.24", features = ["http-client", "server", "macros"] }
tower = "0.4"
hyper = "1.5.2"

tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137", features = ["raw_value"] }
toml = "0.8.19"

eyre = "0.6.12"
uuid = { version = "1.12.1", features = ["v4"] }
thiserror = "2.0.11"
clap = { version = "4.5.27", features = ["derive", "env"] }

directories = "5.0.1"

# Time
chrono = "0.4.23"
quanta = "0.12.3"

# ipc
shared_memory = "^0.12"

# threading
core_affinity = "0.8.1"
crossbeam-channel = "0.5.14"
