[package]
name = "bop-sequencer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bop-common.workspace = true
bop-pool.workspace = true
bop-db.workspace = true

# alloy
alloy-rpc-types.workspace = true

# reth op
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true

# revm
revm-primitives.workspace = true
revm.workspace = true

# async
tokio.workspace = true
futures.workspace = true

tracing.workspace = true

# networking
reqwest.workspace = true
crossbeam-channel.workspace = true

# tmp here so that the the compiler picks up the reth op crates
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
