[package]
name = "bop-sequencer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bop-common.workspace = true
bop-pool.workspace = true
bop-db.workspace = true

# alloy
alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true

# async
tokio.workspace = true
futures.workspace = true

revm-primitives.workspace = true
tracing.workspace = true

# networking
reqwest.workspace = true
crossbeam-channel.workspace = true

# misc
strum_macros.workspace = true
# tmp
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-evm.workspace = true

